<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bgLoginWave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_simple_wave" />

    <ImageView
        android:id="@+id/ivHamburgerMenu"
        android:layout_width="49dp"
        android:layout_height="33dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_hamburgermenu" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="151dp"
        android:layout_height="49dp"

        android:layout_marginTop="40dp"

        android:background="@drawable/custom_button"
        android:text="Login"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayoutWrapper" />

    <TextView
        android:id="@+id/tvMainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:textColor="@color/white"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bgLoginWave"
        app:layout_constraintEnd_toEndOf="@+id/bgLoginWave"
        app:layout_constraintStart_toStartOf="@+id/bgLoginWave"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/custom_input_field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/input_field_email"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bgLoginWave" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordLayoutWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_input_field"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="8dp"
                android:hint="@string/input_field_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/abeezee"
            android:textColor="#980000"
            app:layout_constraintEnd_toEndOf="@+id/txtEmail"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            tools:text="This email does not exist" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/abeezee"
            android:textColor="#980000"
            app:layout_constraintEnd_toEndOf="@+id/txtPasswordLayoutWrapper"
            app:layout_constraintStart_toStartOf="@+id/txtPasswordLayoutWrapper"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayoutWrapper"
            tools:text="You have entered wrong password" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>